--- a/deployment.tex
+++ b/deployment.tex
@@ -41,9 +41,9 @@ So the next question that arises is, does such in-network congestion occur in pr
 
 \paragraphi{Congestion due to bundled cross-traffic} In-network congestion can further increase in the presence of other cross-traffic (\eg when the peering link between Carrier B and the enterprise in Figure~\ref{fig:deploy:arch} is shared by traffic from multiple sending domains). \name continues to provide benefits when such competing flows also belong to bundles created by the {\inbox}es deployed in other domains; the rate control algorithm at each of these {\inbox}es would ensure that the in-network queues remain small, and appropriate scheduling policy would be applied to the per-bundle queues built at the {\inbox}es.
 %Given the earlier observation that most of the traffic belongs to a few large content providers~\cite{fivecomps}, 
-We expect this to become common, as \name's popularity increases. 
+We expect this to become common, \reword{as \name's popularity increases}. 
 
-\paragraphi{Congestion due to un-bundled cross-traffic} We now consider the scenario where the cross-traffic includes flows from domains that have not yet deployed a \name. If all such \emph{un-bundled} competing flows are short-lived (up to a few MBs), the bundled traffic still sees significant performance benefits. However, if the cross traffic includes a persistent backlogged flow that aggressively fills up any available buffer space at the bottleneck link, then, in order to compete fairly, \name relinquishes its control over the bundled traffic and falls back to status quo performance (as described later). Such flows are unlikely to arrive very frequently\radhika{cite}
+\paragraphi{Congestion due to un-bundled cross-traffic} We now consider the scenario where the cross-traffic includes flows from domains that have not yet deployed a \name. If all such \emph{un-bundled} competing flows are short-lived (up to a few MBs), the bundled traffic still sees significant performance benefits. However, if the cross traffic includes a persistent backlogged flow that aggressively fills up any available buffer space at the bottleneck link, then, in order to compete fairly, \name relinquishes its control over the bundled traffic and falls back to status quo performance (as described later). Such flows are unlikely to arrive very frequently\radhika{cite} \fc{Is it okay to say all of this without saying why until later?}
 %some traffic distribution paper}.
 
 %\radhika{can we / do we need to say something about the likelihood for flows in a bundle sharing the bottleneck?}
