--- a/measure.tex
+++ b/measure.tex
@@ -105,8 +105,8 @@ The combination of IP ID, source port and source IP (used by our prototype imple
 
 Given our technique to identify epoch boundaries, it is straight-forward to measure congestion signals, as illustrated in Figure~\ref{fig:ratecalc}.
 %Given this method of marking epochs, we can now construct the procedure for computing measurements.
-For each bundle, the \inbox tracks the total number of bytes sent since the last epoch boundary, and upon identifying an epoch boundary packet, $p_i$, it records: (i) its hash, $h(p_i)$, (ii) the time when it is sent out, $t_{\text{sent}}(p_i)$, and (iii) the number of bytes sent since the last epoch boundary, $b_{sent}(p_i)$. 
-The \outbox, on the other hand, tracks only the total number of bytes received since the last epoch boundary. Upon the arrival and identification of the same epoch boundary packet, $p_i$, it immediately sends a feedback message to the \inbox containing similar information: (i) its hash, $h(p_i)$, (ii) the time when it was received (same as the current time), $t_{recv}(p_i)$, and (iii) the number of bytes received since the last epoch boundary, $b_{recv}(p_i)$. 
+For each bundle, the \inbox tracks the total number of bytes sent since the last epoch boundary, and, upon identifying an epoch boundary packet, $p_i$, it records: (i) its hash, $h(p_i)$, (ii) the time when it is sent out, $t_{\text{sent}}(p_i)$, and (iii) the number of bytes sent since the last epoch boundary, $b_{sent}(p_i)$. 
+The \outbox, on the other hand, tracks only the total number of bytes received since the last epoch boundary. Upon the arrival and identification of the same epoch boundary packet, $p_i$, it immediately sends a feedback message to the \inbox containing: (i) its hash, $h(p_i)$, (ii) the time when it was received, $t_{recv}(p_i)$, and (iii) the number of bytes received since the last epoch boundary, $b_{recv}(p_i)$. 
 %For each bundle, the \inbox keeps track of: (i) the total number of bytes sent since the last epoch, (ii)  
 % For a given bundle, the \inbox runs the aforementioned function on each packet $p$. Each time
 % the function returns true, the \inbox updates an epoch data structure that records the packet hash,
@@ -121,7 +121,7 @@ The \outbox, on the other hand, tracks only the total number of bytes received s
 % packet hash \hptwo\ in the epoch data structure, which represents the end of the current epoch,
 % along with the earliest boundary packet still in the data structure, \hpone\ which represents the start
 % of the current epoch. It now has all of the information necessary to calculate one sample of the following:
-Upon receiving the feedback message for the epoch boundary, $p_i$, the \inbox uses its recorded state to compute the RTT and the rates at which packets are sent and received as below, and then clears the recorded state of all boundary packets preceding $p_i$.
+Upon receiving the feedback $p_i$, the \inbox uses its recorded state to compute the RTT and the rates at which packets are sent and received as below, and then clears the recorded state of all epoch boundary packets preceding $p_i$.
 
 % \begin{subequations}
 %     \begin{align}
@@ -154,6 +154,56 @@ Upon receiving the feedback message for the epoch boundary, $p_i$, the \inbox us
 %\radhika{fix brackets!}
 %leaving \ptwo\ to be the start of the next epoch.
 
+
+% \paragrapha{Crashes \an{need better heading}} Existing work~\cite{ftmb} has studied how to design stateful middleboxes to be fault-tolerant with acceptable performance overheads. 
+% However, state-persistence is largely unnecessary for \name.
+% \name only stores network conditions, which it can re-learn within a few RTTs, and bundle membership flow tables, which it can re-discover as we describe in~\S\ref{s:impl:discovery}. 
+% \radhika{maybe move elsewhere}
+
+\subsection{Choosing The Epoch Size}
+\label{s:measure:epoch}
+%\input{micro-epoch}
+
+% How do we choose the number of packets that should e in each epoch?
+In \S\ref{s:measure:marking}, we assumed a fixed epoch size of $N$ packets. However, in practice, epochs must be such that measurements are collected at least once per RTT~\cite{ccp}. Therefore, for each bundle, we track that minimum observed RTT ($minRTT$ at the \inbox and set the epoch size $N = (0.25 \times minRTT \times send\_rate)$, where the $send\_rate$ is computed as described above. The final rates passed to the congestion control algorithms at the \inbox are then computed over a sliding window of epochs that corresponds . 
+%This makes epoch size a function of the bandwidth-delay product (BDP).
+% Because epoch sizes are sampled from a uniform random variable, setting larger epoch sizes will increase the variance in the observed epoch sizes.
+% If the epoch size is small relative to the rate, the raw measurements will be noisy, but we can correct for this by measuring over a sliding window.
+
+% How do we choose the number of packets that should e in each epoch?
+% In \S\ref{s:measure:marking}, we assumed a fixed epoch size of $N$ packets.
+% However, in practice, the epoch must be a function of the bandwidth-delay product (BDP).
+% Because epoch sizes are sampled from a uniform random variable, setting larger epoch sizes will increase the variance in the observed epoch sizes.
+% If the epoch size is small relative to the rate, the raw measurements will be noisy, but we can correct for this by measuring over a sliding window.
+
+% Therefore, we estimate the BDP (current sending rate multiplied by current estimate of the RTT) and set the desired epoch size to one-fourth of this value. We then calculate rates over a sliding window of four epochs; this is approximately one RTT.
+
+
+When the \inbox updates the epoch size for a bundle, it sends an out-of-band message to the \outbox communicating the new value. 
+
+%As the sending rate and RTT change, the \inbox will update the desired epoch size accordingly, and communicate this desired epoch size to the \outbox.
+% This communication might be lost. 
+% Therefore, when setting the desired epoch size we round down to the nearest power of two so that the \outbox's view of the epoch boundary packets is a sub- or super- set of the \inbox's:
+% for example, 
+% if the \inbox's desired epoch size is $64$ packets
+% but the \outbox does not receive this update and still believes the desired epoch size is $128$ packets, 
+% the \outbox's feedback will still match (in expectation) half the \inbox's epoch boundary packets.
+
+
+\subsection{Limitations}
+\subsubsection{Re-Ordering}
+\label{s:measure:limitation:reorder}
+Earlier we ignored re-ordering of packets between the \inbox and \outbox. However, if packets
+are re-ordered, the \inbox and \outbox will observe a different view of the same epoch.
+For example, consider packets numbered 1 to 20, where 10 is a boundary packet. The \inbox observes
+10 packets in each epoch: [1,10] in epoch 1 and [11,20] in epoch 2. 
+However, suppose packet 7 is delayed and arrives after packet 10. The \outbox will observe 9
+packets in epoch 1 and 11 packets in epoch 2. 
+Spurious re-ordering can be compensated by using an EWMA across epochs rather than the raw values
+calculated at each epoch. If there is persitent re-ordering, it may be necessary to add a constant 
+value to either the send or receive rate to compensate.
+\radhika{the explanation seems a bit hand-wavy. if we end up doing ecmp expt and the results look good, add fwd pointer to those results}
+
 \subsection{Fault Tolerance}
 \label{s:measure:loss}
 \paragrapha{Packet loss} This method is robust to the loss of boundary packets between the \inbox and \outbox.
@@ -166,30 +216,18 @@ The same argument applies to the loss of feedback messages.
 Importantly, \inbox calculates both the send and receive epoch based on information
 from the \outbox rather than attempting to reach consensus on individual epoch boundaries with the \outbox. 
 
-% \paragrapha{Crashes \an{need better heading}} Existing work~\cite{ftmb} has studied how to design stateful middleboxes to be fault-tolerant with acceptable performance overheads. 
-% However, state-persistence is largely unnecessary for \name.
-% \name only stores network conditions, which it can re-learn within a few RTTs, and bundle membership flow tables, which it can re-discover as we describe in~\S\ref{s:impl:discovery}. 
-% \radhika{maybe move elsewhere}
 
-\subsection{Choosing The Epoch Size}
-\label{s:measure:epoch}
-%\input{micro-epoch}
+\subsubsection{Suitable Algorithms}
+\label{s:measure:limitation:algs}
+The set of measurements we obtain are sufficient for most rate-based algorithms, but may not be 
+suitable for traditional window-based algorithms which require low-level metrics such as 
+the number of inflight packets or number of packets lost. Although it should be possible
+to compute these from the measurements we already collect in an ideal scenario, they would easily
+break in the presence of network anomilies such as re-ordering. Thus, we leave the development
+of robust signals for window-based algorithms to fuure work. 
+Thus, \name currently operates best with rate-based algorithms such as BBR, Nimbus, or Copa~\cite{bbr,nimbus,copa}.
+\radhika{feels like this should be moved to Sec 3, but am  not entirely sure.}
 
-How do we choose the number of packets that should e in each epoch?
-In \S\ref{s:measure:marking}, we assumed a fixed epoch size of $N$ packets.
-However, in practice, the epoch must be a function of the bandwidth-delay product (BDP).
-Because epoch sizes are sampled from a uniform random variable, setting larger epoch sizes will increase the variance in the observed epoch sizes.
-If the epoch size is small relative to the rate, the raw measurements will be noisy, but we can correct for this by measuring over a sliding window.
-
-Therefore, we estimate the BDP (current sending rate multiplied by current estimate of the RTT) and set the desired epoch size to one-fourth of this value. We then calculate rates over a sliding window of four epochs; this is approximately one RTT.
-
-As the sending rate and RTT change, the \inbox will update the desired epoch size accordingly, and communicate this desired epoch size to the \outbox.
-This communication might be lost. 
-Therefore, when setting the desired epoch size we round down to the nearest power of two so that the \outbox's view of the epoch boundary packets is a sub- or super- set of the \inbox's:
-for example, 
-if the \inbox's desired epoch size is $64$ packets
-but the \outbox does not receive this update and still believes the desired epoch size is $128$ packets, 
-the \outbox's feedback will still match (in expectation) half the \inbox's epoch boundary packets.
 
 \subsection{Microbenchmarks}
 \label{s:measure:microbench}
@@ -213,27 +251,3 @@ the \outbox's feedback will still match (in expectation) half the \inbox's epoch
     across all of the traces in our evaluation. 80\% of the time we are within 2ms of the actual RTT.
     \radhika{discuss}
     
-\subsection{Limitations}
-\subsubsection{Re-Ordering}
-\label{s:measure:limitation:reorder}
-Earlier we ignored re-ordering of packets between the \inbox and \outbox. However, if packets
-are re-ordered, the \inbox and \outbox will observe a different view of the same epoch.
-For example, consider packets numbered 1 to 20, where 10 is a boundary packet. The \inbox observes
-10 packets in each epoch: [1,10] in epoch 1 and [11,20] in epoch 2. 
-However, suppose packet 7 is delayed and arrives after packet 10. The \outbox will observe 9
-packets in epoch 1 and 11 packets in epoch 2. 
-Spurious re-ordering can be compensated by using an EWMA across epochs rather than the raw values
-calculated at each epoch. If there is persitent re-ordering, it may be necessary to add a constant 
-value to either the send or receive rate to compensate.
-\radhika{the explanation seems a bit hand-wavy. if we end up doing ecmp expt and the results look good, add fwd pointer to those results}
-
-\subsubsection{Suitable Algorithms}
-\label{s:measure:limitation:algs}
-The set of measurements we obtain are sufficient for most rate-based algorithms, but may not be 
-suitable for traditional window-based algorithms which require low-level metrics such as 
-the number of inflight packets or number of packets lost. Although it should be possible
-to compute these from the measurements we already collect in an ideal scenario, they would easily
-break in the presence of network anomilies such as re-ordering. Thus, we leave the development
-of robust signals for window-based algorithms to fuure work. 
-Thus, \name currently operates best with rate-based algorithms such as BBR, Nimbus, or Copa~\cite{bbr,nimbus,copa}.
-\radhika{feels like this should be moved to Sec 3, but am  not entirely sure.}
