--- a/measure.tex
+++ b/measure.tex
@@ -121,7 +121,7 @@ The \outbox, on the other hand, tracks only the total number of bytes received s
 % packet hash \hptwo\ in the epoch data structure, which represents the end of the current epoch,
 % along with the earliest boundary packet still in the data structure, \hpone\ which represents the start
 % of the current epoch. It now has all of the information necessary to calculate one sample of the following:
-Upon receiving the feedback $p_i$, the \inbox uses its recorded state to compute the RTT and the rates at which packets are sent and received as below, and then clears the recorded state of all epoch boundary packets preceding $p_i$.
+Upon receiving the feedback $p_i$, the \inbox uses its recorded state to compute the RTT and the rates at which packets are sent and received as below:
 
 % \begin{subequations}
 %     \begin{align}
@@ -148,6 +148,14 @@ Upon receiving the feedback $p_i$, the \inbox uses its recorded state to compute
         recv\_rate &= &\frac{b_{recv}(p_i) - b_{recv}(p_{i-1})}{t_{recv}(p_i)-t_{recv}(p_{i-1})}
     \end{align}
 \end{subequations}
+
+Finally, the \inbox records the information received in the feedback for $p_i$, and clears the recorded state of all epoch boundaries preceding $p_i$.
+
+
+Note that our measurement technique, as described above, is robust to a boundary packet being lost between the \inbox and the \outbox. In this case, the \inbox would not get a feedback for the lost boundary packet, and it would simply compute rates for the next boundary packet over a longer epoch. 
+%Further note, that our discussion so far has ignored re-ordering of packets between the \inbox and \outbox, in which case, they can see different number of packets between each epoch boundary, which can interfere with the rate computations. We expect such re-ordering to be rare, although computing   
+
+
 %(Note $bytes\_rcvd\_in\_epoch$ can also be interpreted as the number of bytes
 %acknowledged for that epoch, which is a common signal used by many conestion
 %control algorithms.)
@@ -165,7 +173,7 @@ Upon receiving the feedback $p_i$, the \inbox uses its recorded state to compute
 %\input{micro-epoch}
 
 % How do we choose the number of packets that should e in each epoch?
-In \S\ref{s:measure:marking}, we assumed a fixed epoch size of $N$ packets. However, in practice, epochs must be such that measurements are collected at least once per RTT~\cite{ccp}. Therefore, for each bundle, we track that minimum observed RTT ($minRTT$ at the \inbox and set the epoch size $N = (0.25 \times minRTT \times send\_rate)$, where the $send\_rate$ is computed as described above. The final rates passed to the congestion control algorithms at the \inbox are then computed over a sliding window of epochs that corresponds . 
+In \S\ref{s:measure:marking}, we assumed a fixed epoch size of $N$ packets. However, in practice, epochs must be such that measurements are collected at least once per RTT~\cite{ccp}. Therefore, for each bundle, we track that minimum observed RTT ($minRTT$ at the \inbox and set the epoch size $N = (0.25 \times minRTT \times send\_rate)$, where the $send\_rate$ is computed as described above. The final rates passed to the congestion control algorithms at the \inbox are then computed over a sliding window of epochs that corresponds to one RTT. 
 %This makes epoch size a function of the bandwidth-delay product (BDP).
 % Because epoch sizes are sampled from a uniform random variable, setting larger epoch sizes will increase the variance in the observed epoch sizes.
 % If the epoch size is small relative to the rate, the raw measurements will be noisy, but we can correct for this by measuring over a sliding window.
@@ -179,7 +187,7 @@ In \S\ref{s:measure:marking}, we assumed a fixed epoch size of $N$ packets. Howe
 % Therefore, we estimate the BDP (current sending rate multiplied by current estimate of the RTT) and set the desired epoch size to one-fourth of this value. We then calculate rates over a sliding window of four epochs; this is approximately one RTT.
 
 
-When the \inbox updates the epoch size for a bundle, it sends an out-of-band message to the \outbox communicating the new value. To increase the resilience of our appraic
+When the \inbox updates the epoch size $N$ for a bundle, it needs to send an out-of-band message to the \outbox communicating the new value. To keep our measurement technique resilient to potential delay and loss of this message, the epoch size $N$ is always rounded down to the nearest power of two. Doing this ensures that the epoch boundary packets sampled by the \outbox are either a strict superset or a strict subset of those sampled by the \inbox. The \inbox simply ignores the additional feedback messages in former case, and the recorded epoch boundaries for which no feedback has arrived in the latter.  
 
 %As the sending rate and RTT change, the \inbox will update the desired epoch size accordingly, and communicate this desired epoch size to the \outbox.
 % This communication might be lost. 
@@ -190,31 +198,42 @@ When the \inbox updates the epoch size for a bundle, it sends an out-of-band mes
 % the \outbox's feedback will still match (in expectation) half the \inbox's epoch boundary packets.
 
 
-\subsection{Limitations}
-\subsubsection{Re-Ordering}
-\label{s:measure:limitation:reorder}
-Earlier we ignored re-ordering of packets between the \inbox and \outbox. However, if packets
-are re-ordered, the \inbox and \outbox will observe a different view of the same epoch.
-For example, consider packets numbered 1 to 20, where 10 is a boundary packet. The \inbox observes
-10 packets in each epoch: [1,10] in epoch 1 and [11,20] in epoch 2. 
-However, suppose packet 7 is delayed and arrives after packet 10. The \outbox will observe 9
-packets in epoch 1 and 11 packets in epoch 2. 
-Spurious re-ordering can be compensated by using an EWMA across epochs rather than the raw values
-calculated at each epoch. If there is persitent re-ordering, it may be necessary to add a constant 
-value to either the send or receive rate to compensate.
-\radhika{the explanation seems a bit hand-wavy. if we end up doing ecmp expt and the results look good, add fwd pointer to those results}
+% \subsection{Dealing with packet re-ordering and losses}
 
-\subsection{Fault Tolerance}
-\label{s:measure:loss}
-\paragrapha{Packet loss} This method is robust to the loss of boundary packets between the \inbox and \outbox.
-Suppose the \inbox sees boundary packets $p_1, p_2, p_3$, but $p_2$ is lost after passing through
-the \inbox so the \inbox only receives feedback for $p_1$ and $p_3$. Upon receiving $p_1$, 
-the \inbox will truncate its data structure up until $p_1$. Upon receiving $p_3$, the \inbox 
-looks up the oldest remaining boundary packet, $p_1$, and considers that the beginning of the epoch.
-As a result, the epoch is longer than expected, but no measurements are lost or corrupted. 
-The same argument applies to the loss of feedback messages. 
-Importantly, \inbox calculates both the send and receive epoch based on information
-from the \outbox rather than attempting to reach consensus on individual epoch boundaries with the \outbox. 
+% \Para{Packet Loss} Our technique is robust to loss of boundary packets between the \inbox and the \outbox.
+% Suppose the \inbox sees boundary packets $p_1, p_2, p_3$, but $p_2$ is lost after passing through
+% the \inbox so the \inbox only receives feedback for $p_1$ and $p_3$. Upon receiving $p_1$, 
+% the \inbox will truncate its data structure up until $p_1$. Upon receiving $p_3$, the \inbox 
+% looks up the oldest remaining boundary packet, $p_1$, and considers that the beginning of the epoch.
+% As a result, the epoch is longer than expected, but no measurements are lost or corrupted. 
+% The same argument applies to the loss of feedback messages. 
+% Importantly, \inbox calculates both the send and receive epoch based on information
+% from the \outbox rather than attempting to reach consensus on individual epoch boundaries with the \outbox.
+
+% \Para{Packet loss} This method is robust to the loss of boundary packets between the \inbox and \outbox.
+% Suppose the \inbox sees boundary packets $p_1, p_2, p_3$, but $p_2$ is lost after passing through
+% the \inbox so the \inbox only receives feedback for $p_1$ and $p_3$. Upon receiving $p_1$, 
+% the \inbox will truncate its data structure up until $p_1$. Upon receiving $p_3$, the \inbox 
+% looks up the oldest remaining boundary packet, $p_1$, and considers that the beginning of the epoch.
+% As a result, the epoch is longer than expected, but no measurements are lost or corrupted. 
+% The same argument applies to the loss of feedback messages. 
+% Importantly, \inbox calculates both the send and receive epoch based on information
+% from the \outbox rather than attempting to reach consensus on individual epoch boundaries with the \outbox. 
+
+\Para{Re-Ordering}
+\label{s:measure:limitation:reorder}
+
+% Earlier we ignored re-ordering of packets between the \inbox and \outbox. However, if packets
+% are re-ordered, the \inbox and \outbox will observe a different view of the same epoch.
+% For example, consider packets numbered 1 to 20, where 10 is a boundary packet. The \inbox observes
+% 10 packets in each epoch: [1,10] in epoch 1 and [11,20] in epoch 2. 
+% However, suppose packet 7 is delayed and arrives after packet 10. The \outbox will observe 9
+% packets in epoch 1 and 11 packets in epoch 2. 
+% Spurious re-ordering can be compensated by using an EWMA across epochs rather than the raw values
+% calculated at each epoch. If there is persitent re-ordering, it may be necessary to add a constant 
+% value to either the send or receive rate to compensate.
+%\radhika{the explanation seems a bit hand-wavy. if we end up doing ecmp expt and the results look good, add fwd pointer to those results}
+
 
 
 \subsubsection{Suitable Algorithms}
@@ -227,7 +246,7 @@ break in the presence of network anomilies such as re-ordering. Thus, we leave t
 of robust signals for window-based algorithms to fuure work. 
 Thus, \name currently operates best with rate-based algorithms such as BBR, Nimbus, or Copa~\cite{bbr,nimbus,copa}.
 \radhika{feels like this should be moved to Sec 3, but am  not entirely sure.}
-
+\radhika{discuss}
 
 \subsection{Microbenchmarks}
 \label{s:measure:microbench}
