--- a/overview-benefits.tex
+++ b/overview-benefits.tex
@@ -5,6 +5,13 @@
 \includegraphics[width=\maxwidth]{figure/eval:best-1} 
 
 \end{knitrout}
-    \caption{\name achieves $33$\% lower median slowdown. Note the differing axis scales. For both \name and Optimal, performance benefits come from preventing short flows from queueing behind long ones. \an{Whiskers currently show 1.25 inter-quantile range, figure out how to show 99th \%ile? Also, can barely see Bundler and Optimal...}}
+    \caption{\name achieves 33\% lower median slowdown. Note the differing axis scales. For both \name and Optimal, performance benefits come from preventing short flows from queueing behind long ones.}
     \label{fig:eval:best}
 \end{figure}
+\newcommand{\overviewBenefitsBaselineMedian}{1.62}
+\newcommand{\overviewBenefitsBaselineTail}{10.77}
+\newcommand{\overviewBenefitsBundlerMedian}{1.08}
+\newcommand{\overviewBenefitsBundlerTail}{9.84}
+\newcommand{\overviewBenefitsOptimalMedian}{1.08}
+\newcommand{\overviewBenefitsOptimalTail}{4.46}
+\newcommand{\overviewBenefitsBundlerMedianImprovement}{33.25\%}
