--- a/strict-prio.tex
+++ b/strict-prio.tex
@@ -1,5 +1,5 @@
 
-\begin{centering}
+\begin{center}
 \begin{tabular}{c|c|c}
 Scheme     &  Median                                    &  $99$\%ile                                 \\
 \hline
@@ -7,5 +7,5 @@ Bundler    &  1.07  &  10.52  \\
 \baseline  &  3.07  &  201.72
     \label{fig:eval:strict-prio}
 \end{tabular}
-\end{centering}
+\end{center}
 
